This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php




Version 376    ???

--Editor now supports importing temporary test map (so you can work on and
  tweak a test map without actually saving a scene into the scene folder).





Version 374    2023-June-9

--Fixed photo aiming/placement on screen resolutions other than 1280x720.
  Thanks Twisted.  Fixes #827

--Transitions that require unsed items now show (FRESH) or (FULL) in crafting
  hints.  For example, you can see that a pie requires a full bowl of berries,
  and you can see that a diesel mining pick requires a fresh chisel.




Server Fixes

--Now re-sends curse token status upon reconnection.  Thanks Cordy.  Fixes #821

--When the container that we're holding changes size suddenly (like when riding
  over something deadly that tips the horse cart), we temporarily throw the
  thing on the ground before shrinking it, so that it can empty/scatter its
  contents around, before deleting it from the ground.  Old code made a
  sometimes-incorrect assumption about where the item will be temporarily
  dropped (since handleDrop respects biome boundaries), which means that
  sometimes we'd go to delete this temporary object in the wrong spot, leaving
  it behind in its actual spot.  This is the source of the horse-cart
  duplication bug.  handleDrop has been changed to return the actual location
  where the drop lands, and thus we can delete the temporarily-dropped horse
  cart where it actually is.  Thanks Doug L. and many others.  Fixes #814

--Items can now have multiple +cont tags which limit them to being contained
  only in particular containers.  For example, the bowl of water now has both
  +contFoodDish and +contLabDish, allowing it to go on both the food table and
  the lab table.



Version 372    2023-May-24

--Fixed so that LivingLifePage uses visibleViewWidth for all calculations (like